--- a/Classify_Weight_Lifting_Exercise.Rmd
+++ b/Classify_Weight_Lifting_Exercise.Rmd
@@ -2,7 +2,9 @@
 title: "Weight Lifting Exercise Classification"
 author: "Nimit Sharma"
 date: "4/11/2021"
-output: html_document
+output:
+  html_document:
+    keep_md: TRUE
 ---
 
 ```{r setup, include=FALSE}
